test/subjects/errors/convert_ordinal_ticks.php
<?php
	declare (ticks = array (6, "a")) { } // { phc-error: Cannot convert to ordinal value }
?>
